[gd_scene load_steps=4 format=3 uid="uid://cf0cwr2thpkuc"]

[ext_resource type="Script" uid="uid://5heuvncs6h8" path="res://Scripts/menu_principal.gd" id="1_3gi2v"]
[ext_resource type="Theme" uid="uid://iexdiuxut7gi" path="res://Assets/GUI/tema_menu.tres" id="1_hch4x"]
[ext_resource type="Texture2D" uid="uid://sxtkshn53eat" path="res://Assets/GUI/background_fondo.png" id="2_ido3d"]

[node name="Menu_principal" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_hch4x")
script = ExtResource("1_3gi2v")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -58.0
offset_right = 220.0
offset_bottom = 58.0
grow_horizontal = 2
grow_vertical = 2

[node name="Reanudar" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "CONTINUAR"

[node name="Jugar" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "NUEVA PARTIDA"

[node name="Opciones" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "AJUSTES"

[node name="Salir" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "SALIR DEL JUEGO"

[node name="BackgroundFondo" type="Sprite2D" parent="."]
show_behind_parent = true
position = Vector2(578, 324)
scale = Vector2(0.24, 0.24)
texture = ExtResource("2_ido3d")

[connection signal="pressed" from="VBoxContainer/Reanudar" to="." method="_on_reanudar_pressed"]
[connection signal="pressed" from="VBoxContainer/Jugar" to="." method="_on_jugar_pressed"]
[connection signal="pressed" from="VBoxContainer/Opciones" to="." method="_on_opciones_pressed"]
[connection signal="pressed" from="VBoxContainer/Salir" to="." method="_on_salir_pressed"]
